[package]
name = "relay-tester"
version = "0.2.0"
edition = "2021"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Relay test suite for nostr relays"
repository = "https://github.com/mikedilger/relay-tester"
keywords = [ "nostr" ]
license = "MIT"
default-run = "relay-tester"

[[bin]]
name = "relay-tester"

[[bin]]
name = "generate-keypair"
path = "src/bin/generate_keypair.rs"

[dependencies]
base64 = "0.21"
colorful = "0.3"
futures-util = "0.3"
http = "1.1"
lazy_static = "1.4"
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "3613b32dcb501548525d1f01da04a131b6e18373" }
parking_lot = { version = "0.12", features = [ "deadlock_detection" ] }
rand = "0.8"
rand_core = "0.6"
reqwest = "0.12"
rustls = { version = "0.23", features = [ "ring" ] }
secp256k1 = { version = "0.29", features = [ "hashes", "global-context", "rand-std", "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = [ "connect", "handshake", "rustls-tls-webpki-roots" ] }
tungstenite = { version = "0.23", features = [ "rustls-tls-webpki-roots" ] }
